# vivi

./: Cargo.toml  LICENSE  README.md  build.rs
docs/: ssh-linux-audio.md
src/: audio_player.rs  audio_streamer.rs  cli.rs  client.rs  ffmpeg.rs  image_viewer.rs  main.rs  terminal_geometry.rs  video_player.rs
