[package]
name = "vivi"
version = "0.1.0"
edition = "2024"
description = "A Vivid Protocol image viewer and video player for the Vivido terminal"
license = "MIT"
readme = "README.md"
build = "build.rs"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
crossterm = "0.29"
image = "0.25"
libc = "0.2"
getrandom = "0.3"
sha2 = "0.10"
vivid_protocol = "1.1"
