[package]
name = "vivi"
version = "0.1.1"
edition = "2024"
description = "A Vivid Protocol image viewer and media player for the Vivido terminal"
license = "MIT"
readme = "README.md"
build = "build.rs"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
crossterm = "0.29"
image = "0.25"
libc = "0.2"
getrandom = "0.3"
sha2 = "0.10"
vivid_protocol = "1.2.0"

[target.'cfg(any(target_os = "macos", target_os = "linux", windows))'.dependencies]
cpal = "0.17"
ringbuf = "0.5"
