[package]
name = "vivi"
version = "0.1.2"
authors = ["Wensheng Wang <wenshengwang@gmail.com>"]
edition = "2024"
description = "A Vivid Protocol image viewer and media player for the Vivido terminal"
license = "MIT"
readme = "README.md"
repository = "https://github.com/wensheng/vivi"
build = "build.rs"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
crossterm = "0.29"
image = "0.25"
libc = "0.2"
getrandom = "0.4"
sha2 = "0.11"
vivid_protocol = { version = "1.2.1", path = "../vivid_protocol" }
vivid_sdk = { version = "0.1.0", path = "../vivid_sdk" }

[target.'cfg(any(target_os = "macos", target_os = "linux", windows))'.dependencies]
cpal = "0.18"
ringbuf = "0.5"
